@@ -1,3 +1,8 @@
+2003-05-01  Chris Demetriou  <cgd@broadcom.com>
+
+	* gas/mips/mips.exp (mips_arch_init): New function.
+	Call it before setting up architecture array entries.
+
 2003-05-01  H.J. Lu <hjl@gnu.org>
 
 	* gas/elf/elf.exp (run_list_test): Accept empty $opts.
